testsuite/bsc.names/portRenaming/invalidAttrs/port/WrongLoc_Method.bsv

interface Ifc;
  (* port = "foo" *)
  method Action check (Bool x);
endinterface

